[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "In this package, 5 games are implemented, such as brain-even, brain-calc, brain-gcd, brain-progression, brain-prime"
authors = ["Artem Arkhipov <zaq12123@mail.ru>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/titanmen1/python-project-lvl1"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Development Status :: 4 - Beta",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"